--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,10 @@
         <img class="logo" src="https://i.imgur.com/Q7CqyWC.jpeg" alt="TITLE CRAFT logo" width="44" height="44" decoding="async" loading="lazy" />
         <h1>
           <span class="main">TITLE CRAFT</span>
-          <span class="sub">by Genial Design</span>
+          <span class="sub" onclick="window.open('https://t.me/genial_design','_blank')" style="cursor:pointer;">
+  by Genial Design
+</span>
+
         </h1>
       </div>
     </header>
